--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+.italic {
+  font-style: italic; }
+
 /*Colors*/
 body {
   font-family: "Roboto Slab", sans-serif;
@@ -25,7 +28,9 @@ header {
   background-image: url("../img/Books_for_Wanderers_Featured.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center; }
+  background-position: center center;
+  -webkit-filter: grayscale(60%);
+  filter: grayscale(60%); }
   header h1 {
     color: #fff;
     font-size: 56px;
@@ -47,9 +52,9 @@ header {
   background-color: #1C1F23;
   color: #fff; }
 
-.img-circle {
-  max-width: 300px; }
-
+/* .img-circle {*/
+/* 	max-width: 300px;*/
+/* }*/
 .pad-row {
   padding: 100px 0px; }
 
@@ -57,10 +62,47 @@ header {
   padding: 100px 50px; }
 
 .media-container .media-item .media {
-  padding: 10px; }
+  padding: 10px;
+  min-height: 480px;
+  margin-bottom: 30px;
+  border: 4px solid #fff; }
   .media-container .media-item .media img {
-    max-width: 100px; }
+    max-width: 100px;
+    -webkit-filter: grayscale(60%);
+    filter: grayscale(60%);
+    display: inline-block;
+    margin: 0 auto;
+    position: relative;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    border-radius: 0;
+    border-color: #fff; }
   .media-container .media-item .media .media-body {
     color: #fff; }
+  .media-container .media-item .media .media-center {
+    position: relative;
+    padding: 40px 0; }
+  .media-container .media-item .media .media-heading {
+    font-size: 28px;
+    letter-spacing: 1px; }
+  .media-container .media-item .media h6 {
+    font-size: 14px;
+    line-height: 1.2;
+    padding-bottom: 10px; }
+  .media-container .media-item .media .label {
+    font-size: 12px;
+    border-radius: 0;
+    display: inline-block;
+    margin: 0 3px;
+    background-color: #83715C;
+    padding: 7px 15px 9px;
+    text-transform: uppercase; }
+  .media-container .media-item .media .glyphicon {
+    font-size: 20px;
+    padding: 3px;
+    color: #83715C; }
+  .media-container .media-item .media .rating {
+    padding: 15px 0; }
 
 /*# sourceMappingURL=style.css.map */
