--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+
+/*font-related stuff*/
 $alfa: 'Alfa Slab One', cursive;
 $robotoSlab: 'Roboto Slab', sans-serif;
 $base-font-size: 14px;
@@ -6,19 +8,22 @@ $letter-spacing-default: 1px;
 	font-style: italic;
 }
 
+h1, h2, h3, h4{
+	font-family: $alfa;
+}
+
 /*Colors*/
 $dark: #1C1F23;
 $white: #fff;
 $beige: #83715C;
 
+$transition-default: all 0.5s ease;
+
+/*Layout Elements*/
 body {
 	font-family: $robotoSlab;
 	font-weight: 400;
 	font-size: $base-font-size;
-}
-
-h1, h2, h3, h4{
-	font-family: $alfa;
 }
 
 .navbar {
@@ -29,6 +34,22 @@ h1, h2, h3, h4{
 	}
 	.navbar-brand {
 		color: $white;
+		outline: 0;
+		font-size: ($base-font-size - 2);
+    	border-radius: 0;
+    	background-color: $beige;
+	    padding: 7px 15px 9px;
+	    text-transform: uppercase;
+	    -webkit-transition: $transition-default;
+	    transition: $transition-default;
+		.add-item {
+			display: inline-block;
+			margin-left: 10px;
+		}
+		&:hover, &:focus {
+			background-color: darken($beige, 20%);
+			color: $white;
+		}
 	}
 	.glyphicon.glyphicon-plus {
 		color: $dark;
@@ -59,29 +80,14 @@ header {
 		span {
 			display: block;
 			text-transform: none;
-			font-size: ($base-font-size * 1.5);
-			font-family: $robotoSlab;
-			font-style: italic;
+			font-size: ($base-font-size * 2);
+			padding: 10px;
+			small {
+				color: $white;
+			}
 		}
 	}
 
-}
-
-.dark-bg {
-	background-color: $dark;
-	color: $white;
-}
-
-/* .img-circle {*/
-/* 	max-width: 300px;*/
-/* }*/
-
-.pad-row {
-	padding: 100px 0px;
-}
-
-.pad-row-lr {
-	padding: 100px 50px;
 }
 
 .media-container {
@@ -125,9 +131,12 @@ header {
             	border-radius: 0;
             	display: inline-block;
             	margin: 0 3px;
-            	background-color: $beige;
+            	background-color: darken($beige, 20%);
         	    padding: 7px 15px 9px;
         	    text-transform: uppercase;
+        	    &.label-info {
+        	    	background-color: $beige;
+        	    }
             }
 			.glyphicon {
 				font-size: 20px;
@@ -139,6 +148,25 @@ header {
 			}
 		}
 	}
+}
+
+#modal-form {
+	border-radius: 0;
+	border: 0;
+}
+
+/*helper classes*/
+.dark-bg {
+	background-color: $dark;
+	color: $white;
+}
+
+.pad-row {
+	padding: 100px 0px;
+}
+
+.pad-row-lr {
+	padding: 100px 50px;
 }
 
 
