--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,8 +86,10 @@ header {
 				color: $white;
 			}
 		}
+		@media (max-width: 500px) {
+			font-size: ($base-font-size * 2.5);
+		}
 	}
-
 }
 
 .media-container {
