--- a/css/style.css
+++ b/css/style.css
@@ -115,8 +115,68 @@ header {
     padding: 15px 0; }
 
 #modal-form {
-  border-radius: 0;
-  border: 0; }
+  background: rgba(28, 31, 35, 0.84); }
+  #modal-form .modal-content {
+    border-radius: 0;
+    border: 4px solid #fff;
+    background-color: #1C1F23;
+    color: #fff;
+    padding: 20px 35px; }
+    #modal-form .modal-content .modal-title {
+      letter-spacing: 1px;
+      text-align: center;
+      font-size: 24px; }
+    #modal-form .modal-content .modal-header,
+    #modal-form .modal-content .modal-footer {
+      border-width: 0; }
+      #modal-form .modal-content .modal-header .close,
+      #modal-form .modal-content .modal-footer .close {
+        color: #fff;
+        text-shadow: none;
+        opacity: 1; }
+    #modal-form .modal-content .modal-footer {
+      padding: 30px 0 15px 0; }
+    #modal-form .modal-content .btn {
+      border-radius: 0;
+      border: 0;
+      width: 48%;
+      text-transform: uppercase;
+      font-size: 14px;
+      padding: 10px 30px;
+      color: #fff;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease;
+      outline: 0;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
+      #modal-form .modal-content .btn.btn-primary {
+        background-color: #83715C; }
+        #modal-form .modal-content .btn.btn-primary:hover, #modal-form .modal-content .btn.btn-primary:focus {
+          background-color: #473d32; }
+      #modal-form .modal-content .btn.btn-default {
+        background-color: #473d32; }
+        #modal-form .modal-content .btn.btn-default:hover, #modal-form .modal-content .btn.btn-default:focus {
+          background-color: #83715C; }
+  #modal-form .form-control, #modal-form select {
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: transparent;
+    color: #fff;
+    border-color: #83715C; }
+  #modal-form .has-error .form-control, #modal-form .has-error .form-control-feedback {
+    border-color: #C73835; }
+  #modal-form .has-success .form-control, #modal-form .has-success .form-control-feedback {
+    border-color: #38C13B; }
+  #modal-form select {
+    -webkit-appearance: none; }
+  #modal-form label {
+    font-weight: 400;
+    text-transform: uppercase; }
+  #modal-form .bg-danger {
+    padding: 5px;
+    background-color: transparent;
+    border: 1px solid #C73835; }
 
 /*helper classes*/
 .dark-bg {
