--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,8 @@ h1, h2, h3, h4{
 $dark: #1C1F23;
 $white: #fff;
 $beige: #83715C;
+$error: #C73835;
+$success: #38C13B;
 
 $transition-default: all 0.5s ease;
 
@@ -153,8 +155,88 @@ header {
 }
 
 #modal-form {
-	border-radius: 0;
-	border: 0;
+	background: rgba(28, 31, 35, 0.84);
+	.modal-content {
+		border-radius: 0;
+		border: 4px solid $white;
+		background-color: $dark;
+		color: $white;
+	    padding: 20px 35px;
+		.modal-title {
+			letter-spacing: $letter-spacing-default;
+		    text-align: center;
+    		font-size: 24px;
+		}
+		.modal-header,
+		.modal-footer {
+			border-width: 0;
+			.close {
+				color: $white;
+				text-shadow: none;
+				opacity: 1;
+			}
+		}
+		.modal-footer {
+			padding: 30px 0 15px 0;
+		}
+		.btn {
+			border-radius: 0;
+			border:0;
+			width: 48%;
+			text-transform: uppercase;
+			font-size: $base-font-size;
+			padding: 10px 30px;
+			color: $white;
+			-webkit-transition: $transition-default;
+			transition: $transition-default;
+			outline: 0;
+			-webkit-box-shadow: none;
+			        box-shadow: none;
+			&.btn-primary {
+				background-color: $beige;
+				&:hover, &:focus {
+					background-color: darken($beige, 20%);
+				}
+			}
+			&.btn-default {
+				background-color: darken($beige, 20%);
+				&:hover, &:focus {
+					background-color: $beige;
+				}
+			}
+		}
+	}
+	.form-control, select {
+		border-radius: 0;
+		-webkit-box-shadow: none;
+		        box-shadow: none;
+        background-color: transparent;
+        color: $white;
+        border-color: $beige;
+	}
+	.has-error {
+		.form-control, .form-control-feedback {
+		    border-color: $error;
+		}
+	}
+	.has-success {
+		.form-control, .form-control-feedback  {
+			border-color: $success;
+		}
+	}
+	select {
+		-webkit-appearance: none;
+	}
+	label {
+		font-weight: 400;
+    	text-transform: uppercase;
+	}
+	.bg-danger {
+		padding: 5px;
+		background-color: transparent;
+		border: 1px solid $error;
+	}
+	
 }
 
 /*helper classes*/
