--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ header {
 
 .media-container .media-item .media {
   padding: 10px;
-  min-height: 480px;
+  min-height: 500px;
   margin-bottom: 30px;
   border: 4px solid #fff; }
   .media-container .media-item .media img {
@@ -157,6 +157,11 @@ header {
         background-color: #473d32; }
         #modal-form .modal-content .btn.btn-default:hover, #modal-form .modal-content .btn.btn-default:focus {
           background-color: #83715C; }
+      #modal-form .modal-content .btn.btn-sm {
+        width: 100%;
+        clear: both;
+        margin-left: 0;
+        margin-top: 25px; }
   #modal-form .form-control, #modal-form select {
     border-radius: 0;
     -webkit-box-shadow: none;
