--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,7 +98,7 @@ header {
 	.media-item {
 		.media {
 			    padding: 10px;
-			    min-height: 480px;
+			    min-height: 500px;
 			    margin-bottom: 30px;
 			    border: 4px solid #fff;
 			img {
@@ -203,6 +203,12 @@ header {
 				&:hover, &:focus {
 					background-color: $beige;
 				}
+			}
+			&.btn-sm {
+				width: 100%;
+				clear: both;
+			    margin-left: 0;
+			    margin-top: 25px;
 			}
 		}
 	}
